user/logs/stride-151221_012002.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Preloading suits...
Preloading Toon heads...
Preloading avatars...
{401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x153AFC38>, 420000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x153AFAA8>, 4300001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x153AFB98>}
__handleAvatarChooserDone: 100000032, 'Tom Bumberpop', ('css', 'ms', 'm', 'm', (1.0, 1.0, 1.0, 1.0), (0.93, 0.26, 0.28, 1.0), (1.0, 1.0, 1.0, 1.0), (1.0, 1.0, 1.0, 1.0), 78, 27, 67, 27, 17, 27), 1
entered wait for zone redirect
entered wait for set zone response - 2
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
entered wait for zone redirect
entered wait for set zone response - 2
Reading DNA file... phase_4/dna/storage.pdna
Reading DNA file... phase_3.5/dna/storage_interior.pdna
Reading DNA file... phase_5.5/dna/storage_estate.pdna
Reading DNA file... phase_5.5/dna/winter_storage_estate.pdna
Reading DNA file... phase_5.5/dna/estate_1.pdna
entered wait for zone redirect
entered wait for set zone response - 2
no shovel bar
entered wait for zone redirect
entered wait for set zone response - 2
Traceback (most recent call last):
  File "C:\Toontown HD Test v1.2.5\toontown\toonbase\ToontownStart.py", line 50, in __inject_wx
    exec(code, globals())
  File "<string>", line 1
    ToontownChatManager.HackerChat.requestUpdate()
    ^
IndentationError: unexpected indent
Traceback (most recent call last):
  File "C:\Toontown HD Test v1.2.5\toontown\toonbase\ToontownStart.py", line 50, in __inject_wx
    exec(code, globals())
  File "<string>", line 1
    base.cr.userSignature != sha1('HackerAdmin').digest():
                                                         ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "C:\Toontown HD Test v1.2.5\toontown\toonbase\ToontownStart.py", line 50, in __inject_wx
    exec(code, globals())
  File "<string>", line 1, in <module>
NameError: name 'sha1' is not defined
Debug stack trace of  (back 15 frames):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Toontown HD Test v1.2.5\toontown\toonbase\ToontownStart.py", line 217, in <module>
    base.run()
  File "otp\otpbase\OTPBase.py", line 34, in run
    taskMgr.run()
  File "C:\Panda3D-1.10.0\direct\task\Task.py", line 508, in run
    self.step()
  File "C:\Panda3D-1.10.0\direct\task\Task.py", line 465, in step
    self.mgr.poll()
  File "C:\Panda3D-1.10.0\direct\showbase\EventManager.py", line 52, in eventLoopTask
    self.doEvents()
  File "C:\Panda3D-1.10.0\direct\showbase\EventManager.py", line 46, in doEvents
    processFunc(self.eventQueue.dequeueEvent())
  File "C:\Panda3D-1.10.0\direct\showbase\EventManager.py", line 103, in processEvent
    messenger.send(eventName, paramList)
  File "C:\Panda3D-1.10.0\direct\showbase\Messenger.py", line 326, in send
    self.__dispatch(acceptorDict, event, sentArgs, foundWatch)
  File "C:\Panda3D-1.10.0\direct\showbase\Messenger.py", line 411, in __dispatch
    method (*(extraArgs + sentArgs))
  File "C:\Panda3D-1.10.0\direct\gui\DirectButton.py", line 103, in commandFunc
    apply(self['command'], self['extraArgs'])
  File "toontown\catalog\MailboxScreen.py", line 162, in __handleExit
    self.__acceptExit()
  File "toontown\catalog\MailboxScreen.py", line 173, in __acceptExit
    self.unload()
  File "toontown\catalog\MailboxScreen.py", line 140, in unload
    self.frameDelStackTrace = StackTrace()
***** NOTE: This is not a crash. This is a debug stack trace. *****
Debug stack trace of  (back 20 frames):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Toontown HD Test v1.2.5\toontown\toonbase\ToontownStart.py", line 217, in <module>
    base.run()
  File "otp\otpbase\OTPBase.py", line 34, in run
    taskMgr.run()
  File "C:\Panda3D-1.10.0\direct\task\Task.py", line 508, in run
    self.step()
  File "C:\Panda3D-1.10.0\direct\task\Task.py", line 465, in step
    self.mgr.poll()
  File "C:\Panda3D-1.10.0\direct\showbase\EventManager.py", line 52, in eventLoopTask
    self.doEvents()
  File "C:\Panda3D-1.10.0\direct\showbase\EventManager.py", line 46, in doEvents
    processFunc(self.eventQueue.dequeueEvent())
  File "C:\Panda3D-1.10.0\direct\showbase\EventManager.py", line 103, in processEvent
    messenger.send(eventName, paramList)
  File "C:\Panda3D-1.10.0\direct\showbase\Messenger.py", line 326, in send
    self.__dispatch(acceptorDict, event, sentArgs, foundWatch)
  File "C:\Panda3D-1.10.0\direct\showbase\Messenger.py", line 411, in __dispatch
    method (*(extraArgs + sentArgs))
  File "C:\Panda3D-1.10.0\direct\showbase\ShowBase.py", line 2665, in windowEvent
    self.userExit()
  File "toontown\toonbase\ToonBase.py", line 400, in userExit
    self.cr.dumpAllSubShardObjects()
  File "toontown\distributed\ToontownClientRepository.py", line 556, in dumpAllSubShardObjects
    self.deleteObject(doId)
  File "toontown\distributed\ToontownClientRepository.py", line 906, in deleteObject
    obj.deleteOrDelay()
  File "C:\Panda3D-1.10.0\direct\distributed\DistributedObject.py", line 199, in deleteOrDelay
    self.disableAnnounceAndDelete()
  File "C:\Panda3D-1.10.0\direct\distributed\DistributedObject.py", line 202, in disableAnnounceAndDelete
    self.disableAndAnnounce()
  File "C:\Panda3D-1.10.0\direct\distributed\DistributedObject.py", line 228, in disableAndAnnounce
    self.disable()
  File "toontown\estate\DistributedMailbox.py", line 88, in disable
    self.mailboxGui.hide()
  File "toontown\catalog\MailboxScreen.py", line 48, in hide
    print StackTrace()
***** NOTE: This is not a crash. This is a debug stack trace. *****
gardenPage Unloading
